--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,6 +1,11 @@
-<%= form_for @group do |f| %>
+<%= simple_form_for @group do |f| %>
 
 <div calss="form-group">
+
+  <%= f.input :title, input_html: { class: "form-control" } %>
+  <%= f.input :description, input_html: { class: "form-control" } %>
+
+  <!--
   <div class="form-group string optional">
     <%= f.label "title", :class => "string optional control-label" %>
     <%= f.text_field :title, :class => "string optional form-control" %>
@@ -10,6 +15,7 @@
     <%=f.label "description", :class => "string optional control-label" %>
     <%=f.text_area :description, :class => "string optional form-control" %>
   <div>
+  -->
 
 </div>
 
