--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -24,4 +24,8 @@
         </tr>
       <% end %>
     </tbody>
+  </table>
+  <div class="text-center">
+    <%= will_paginate @posts %>
+  </div>
 </div>
