--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -12,6 +12,8 @@
       </tr>
     </thead>
     <tbody>
+      <%= render :partil => "group_item", :collection => @groups, :as => :group %>
+      <!--
       <% @groups.each do |group| %>
         <tr>
           <td>#</td>
@@ -27,6 +29,7 @@
           </td>
         </tr>
       <% end %>
+      -->
     </tbody>
   </table>
 </div>
